--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(PUBLIC_INCLUDES
 	source/Window.hpp
 	source/Event.hpp
 	source/Renderer/ShaderProgram.hpp
+	source/Renderer/IndexBuffer.hpp
 	source/Renderer/VertexBuffer.hpp
 	source/Renderer/VertexArray.hpp
 )
@@ -19,6 +20,7 @@ set(PUBLIC_SOURCES
 	source/Application.cpp
 	source/Window.cpp
 	source/Renderer/ShaderProgram.cpp
+	source/Renderer/IndexBuffer.cpp
 	source/Renderer/VertexBuffer.cpp
 	source/Renderer/VertexArray.cpp
 )
