--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(PUBLIC_INCLUDES
 	source/Application.hpp
 	source/Window.hpp
 	source/Event.hpp
+	source/Renderer/Texture2D.hpp
 	source/Renderer/ShaderProgram.hpp
 	source/Renderer/IndexBuffer.hpp
 	source/Renderer/VertexBuffer.hpp
@@ -21,6 +22,7 @@ set(PUBLIC_INCLUDES
 set(PUBLIC_SOURCES
 	source/Application.cpp
 	source/Window.cpp
+	source/Renderer/Texture2D.cpp
 	source/Renderer/ShaderProgram.cpp
 	source/Renderer/IndexBuffer.cpp
 	source/Renderer/VertexBuffer.cpp
