--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ set(PUBLIC_INCLUDES
 	source/Window.hpp
 	source/Event.hpp
 	source/Polygon2D.hpp
+	source/Animated_Polygon2D.hpp
 	source/Renderer/Texture2D.hpp
 	source/Renderer/ShaderProgram.hpp
 	source/Renderer/IndexBuffer.hpp
@@ -24,6 +25,7 @@ set(PUBLIC_SOURCES
 	source/Application.cpp
 	source/Window.cpp
 	source/Polygon2D.cpp
+	source/Animated_Polygon2D.cpp
 	source/Renderer/Texture2D.cpp
 	source/Renderer/ShaderProgram.cpp
 	source/Renderer/IndexBuffer.cpp
