--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ set(PUBLIC_INCLUDES
 	src/Game/GameObjects/Cube.hpp
 	src/Game/GameObjects/Block.hpp
 	src/Game/GameObjects/Chunk.hpp
+	src/Game/GameStates/StartScreen.hpp
 	src/Game/Renderer/ChunkRenderer.hpp
 	src/RenderEngine/OpenGL/Polygon2D.hpp
 	src/RenderEngine/OpenGL/Animated_Polygon2D.hpp
@@ -35,6 +36,7 @@ set(PUBLIC_SOURCES
 	src/Game/GameObjects/Cube.cpp
 	src/Game/GameObjects/Block.cpp
 	src/Game/GameObjects/Chunk.cpp
+	src/Game/GameStates/StartScreen.cpp
 	src/Game/Renderer/ChunkRenderer.cpp
 	src/RenderEngine/OpenGL/Polygon2D.cpp
 	src/RenderEngine/OpenGL/Animated_Polygon2D.cpp
